@@ -5,6 +5,7 @@ CHANGELOG
 ------------------
 
 * Moodle 3.4 compatible version
+* [FIXED] #4674: Dashboard error in group mode
 
 3.3.1 (2017-08-09)
 ------------------
